--- a/Go-ToDoList/.gitignore
+++ b/Go-ToDoList/.gitignore
@@ -1,2 +1,34 @@
-go.mod
 .env
+# Binaries
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+
+# Build output
+/bin/
+/build/
+/dist/
+
+# Go workspace file
+go.work
+go.work.sum
+
+# Go module cache (jika pakai vendor)
+vendor/
+
+# Editor/IDE
+.vscode/
+.idea/
+*.swp
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs and temporary files
+*.log
+*.tmp
